3-apps/_legacy-redis/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: legacy-redis
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: legacy-redis
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - legacy-maliev-accounting-service
                  - legacy-maliev-career-service
                  - legacy-maliev-catalog-service
                  - legacy-maliev-contact-service
                  - legacy-maliev-country-service
                  - legacy-maliev-customer-service
                  - legacy-maliev-employee-service
                  - legacy-maliev-file-service
                  - legacy-maliev-intranet
                  - legacy-maliev-intranet-bff
                  - legacy-maliev-order-service
                  - legacy-maliev-procurement-service
                  - legacy-maliev-quotation-service
                  - legacy-maliev-web
      ports:
        - protocol: TCP
          port: 6379
  egress: []
